# docs/swagger.json
@@ -45,8 +45,60 @@
         }
       }
     },
+    "/api/feed": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "x-session-id",
+            "in": "header",
+            "description": "x-session-id",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "description": "x-access-token",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/playlist/me": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "x-session-id",
+            "in": "header",
+            "description": "x-session-id",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "description": "x-access-token",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/playlist/{clip_id}": {
-      "post": {
+      "get": {
         "description": "",
         "parameters": [
           {
@@ -82,60 +134,8 @@
         }
       }
     },
-    "/api/feed": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "x-session-id",
-            "in": "header",
-            "description": "x-session-id",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "x-access-token",
-            "in": "header",
-            "description": "x-access-token",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/playlist/me": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "x-session-id",
-            "in": "header",
-            "description": "x-session-id",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "x-access-token",
-            "in": "header",
-            "description": "x-access-token",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/api/clips/trashed": {
-      "post": {
+      "get": {
         "description": "",
         "parameters": [
           {
@@ -202,7 +202,7 @@
       }
     },
     "/api/generate/lyrics/{clip_id}": {
-      "post": {
+      "get": {
         "description": "",
         "parameters": [
           {
